<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="com.example.qrcodemarket.ui.auth.AuthViewModel"/>
    </data>
    <LinearLayout
            android:id="@+id/register_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.RegisterFragment"
            android:orientation="vertical">
        <LinearLayout
                android:layout_height="250dp"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:background="@drawable/header2">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qr_code_market"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_marginTop="40dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/let_s_join_hands_to_prevent_covid"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:textColor="#ffffff"
                    android:letterSpacing="0.03"/>

        </LinearLayout>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:layout_marginTop="-35dp"
                android:layout_marginStart="35dp"/>
        <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_full_name"
                android:text="@={viewModel.fullName}"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_name"
                android:drawablePadding="8dp"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:inputType="text"/>
        <EditText
                android:id="@+id/edtDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_date_of_birth"
                android:text="@={viewModel.dateOfBirth}"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="8dp"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginTop="20dp"
                android:inputType="date"
                android:autofillHints=""/>

        <EditText
                android:id="@+id/edtNumberPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.numberPhone}"
                android:hint="@string/enter_your_number_phone"
                android:background="@drawable/border"
                android:maxLength="10"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:inputType="number|phone"/>
        <EditText
                android:id="@+id/edtLoginName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.loginName}"
                android:hint="@string/enter_your_login_name"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_person_user"
                android:drawablePadding="8dp"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:inputType="text"/>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:hint=" "
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginTop="10dp">

            <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:background="@drawable/border"
                    android:text="@={viewModel.password}"
                    android:drawableStart="@drawable/ic_padlock"
                    android:drawablePadding="8dp"
                    android:layout_height="45dp"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:autofillHints=""
            />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btnContinue"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:text="@string/continue_button"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="@drawable/button"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
        />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_have_account"
                    android:textSize="16sp"
                    android:textColor="#787878"
                    android:layout_gravity="center"/>
            <TextView
                    android:id="@+id/txtSingIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textSize="16sp"
                    android:textColor="#191919"
                    android:layout_gravity="center"
            />

        </LinearLayout>
    </LinearLayout>
</layout>