<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:clickable="true"
        android:background="@color/white"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/accountSt"
        tools:context=".ui.fragment.AccountSettingFragment">
    <androidx.appcompat.widget.Toolbar
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/blue"
            android:id="@+id/toolbar_acc"
            tools:ignore="MissingConstraints">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

            <ImageView
                    android:id="@+id/imgBackArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"/>
            <TextView
                    android:id="@+id/txtLayoutName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/account_setting"
                    android:textSize="22sp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
            />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:id="@+id/txtFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_acc"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.048"/>

    <EditText
            android:id="@+id/edtFullName"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_full_name"
            android:background="@drawable/border"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/txtFullName" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.372"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/txtDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="110dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_acc"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.047"/>
    <EditText
            android:id="@+id/edtDateOfBirth"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_full_name"
            android:background="@drawable/border"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/txtDateOfBirth" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.372"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/txtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="200dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_acc"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.054"/>
    <EditText
            android:id="@+id/edtAddress"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_full_name"
            android:background="@drawable/border"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/txtAddress" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.372"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/txtNumberPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_phone"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="290dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_acc"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.051"/>
    <EditText
            android:id="@+id/edtNumberPhone"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_full_name"
            android:background="@drawable/border"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/txtNumberPhone" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.372"
            android:layout_marginTop="8dp"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:id="@+id/layoutButton" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNumberPhone" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.49">

        <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="#434343"
                android:textStyle="bold"
                android:background="@drawable/button2"
                tools:ignore="MissingConstraints"
        />

        <Button
                android:id="@+id/btnSaveChange"
                android:layout_width="340dp"
                android:layout_height="50dp"
                android:text="@string/save_change"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:layout_gravity="center"
                tools:ignore="MissingConstraints"
        />
        <ImageView
                android:id="@+id/imgDistance"
                android:background="@drawable/distance"
                android:layout_width="322dp"
                android:layout_height="138dp"
                tools:ignore="MissingConstraints"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>