<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragment.AddMarketFragment">

    <androidx.appcompat.widget.Toolbar
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/blue"
            android:id="@+id/toolbar_acc"
            tools:ignore="MissingConstraints">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

            <ImageView
                    android:id="@+id/imgBackArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"/>
            <TextView
                    android:id="@+id/txtLayoutName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/add_market"
                    android:textSize="22sp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
            />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
            android:layout_height="250dp"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/header_country"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-16dp" app:layout_constraintTop_toBottomOf="@+id/toolbar_acc"
            android:id="@+id/linearLayout">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="-30dp"
                android:src="@drawable/wecan"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:id="@+id/linearLayout3">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ID Market Next:"
                    android:textSize="20sp"/>
            <TextView
                    android:id="@+id/txtIdMarketNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="20sp"/>
        </LinearLayout>

        <EditText
                android:id="@+id/edtNameMarket"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name_market"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_namemarket"
                android:drawablePadding="8dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="MissingConstraints" tools:layout_editor_absoluteY="400dp"
                tools:layout_editor_absoluteX="16dp"/>
        <EditText
                android:id="@+id/edtLocation"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_market_location"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="8dp"
                android:autofillHints=""
                android:layout_marginTop="20dp"
                android:inputType="text"
                tools:ignore="MissingConstraints" tools:layout_editor_absoluteY="400dp"
                tools:layout_editor_absoluteX="16dp"/>

        <EditText
                android:id="@+id/edtUrlQRIn"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_url_image_qrcode_in"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_qr_code"
                android:drawablePadding="8dp"
                android:autofillHints=""
                android:layout_marginTop="20dp"
                android:inputType="text"
                tools:ignore="MissingConstraints" tools:layout_editor_absoluteY="400dp"
                tools:layout_editor_absoluteX="16dp"/>

        <EditText
                android:id="@+id/edtUrlQROut"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_url_image_qrcode_out"
                android:background="@drawable/border"
                android:drawableStart="@drawable/ic_qr_code"
                android:drawablePadding="8dp"
                android:autofillHints=""
                android:layout_marginTop="20dp"
                android:inputType="text"
                tools:ignore="MissingConstraints" tools:layout_editor_absoluteY="400dp"
                tools:layout_editor_absoluteX="16dp"/>
    </LinearLayout>

    <Button
            android:id="@+id/btnSaveChange"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:text="@string/save_market"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:background="@drawable/button"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginBottom="64dp" app:layout_constraintVertical_bias="0.808"/>

</androidx.constraintlayout.widget.ConstraintLayout>